--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "aos": "^2.3.4",
     "flowbite": "^2.4.1",
     "flowbite-react": "^0.10.1",
+    "formik": "^2.4.6",
+    "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-datepicker": "^7.2.0",
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
