--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "formik": "^2.4.6",
     "gsap": "^3.12.5",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-datepicker": "^7.2.0",
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
+    "react-scroll-trigger": "^0.6.14",
+    "react-spring": "^9.7.4",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0",
     "yup-phone": "^1.3.2"
