--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "5.0.1",
     "react-scroll-trigger": "^0.6.14",
     "react-spring": "^9.7.4",
+    "react-video-js-player": "^1.1.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0",
     "yup-phone": "^1.3.2"
