--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "flowbite-react": "^0.10.1",
     "formik": "^2.4.6",
     "gsap": "^3.12.5",
+    "lottie-react": "^2.4.0",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-datepicker": "^7.2.0",
