--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-spring": "^9.7.4",
     "react-video-js-player": "^1.1.1",
     "web-vitals": "^2.1.4",
+    "web3": "^1.7.4",
     "yup": "^1.4.0",
     "yup-phone": "^1.3.2"
   },
